--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,17 +1,8 @@
-div {
-	height: 1000px;
-	width: 1000px;
-	margin: auto;
-}
-
-input {
-  width: 1000px;
-  height: 1000px;
-}
 body {
     background-color: #000;
 }
 
+/*Page header styling*/
 h1 {
 	color:FFF;
 	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
@@ -19,8 +10,101 @@ h1 {
 	font-weight: 500;
 	line-height: 26.4px;
 	text-transform: uppercase;
+	text-align: center;
+	margin: 10;
+	padding: 30;
 }
 
-body {
-	margin: 50;
+*{
+  margin:auto;
+  padding:auto;
+  box-sizing:border-box;
+  border:0;
+}
+
+body{
+  font: 20px/100%;
+ font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+  }
+
+.clear{clear:both;}
+
+.wrapper{
+  width:90%;
+  margin:10px auto;
+}
+.commentBox{
+  
+}
+/*grey border styling*/
+fieldset{
+  padding:10px;
+  background:#A9A9A9;
+}
+.form_grp{
+  margin-bottom:10px;
+}
+/*style of prompt text*/
+label{
+  width:100%;
+  height:32px;
+  line-height:32px;
+  display:block;
+  margin-bottom:10px;
+  font-size:30px;
+  color:#000;
+ padding-left:34px; background:url(https://cdn3.iconfinder.com/data/icons/glypho-free/64/pen-checkbox-32.png) no-repeat left center;
+}
+/*text box font properties*/
+textarea{
+  width:100%;
+  height:800px;
+  padding:10px;
+  border:1px solid #eee;
+  resize:none;
+  font-size: 18px;
+  font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+}
+/*button styling*/
+button{
+  padding:5px 20px;
+  background-color:#000;
+  color:#fff;
+  float:right;
+  font-size: 18px;
+}
+
+.viewCmnt{
+  clear:both;
+  overflow:hidden;
+  position:relative;
+  background:#c8e7fb;
+  border-bottom:1px solid #A6DAFC;
+}
+.viewCmnt p {
+  width:100%;
+  float:left;
+  padding:10px;
+  font-size:18px;
+  line-height:20px;
+  }
+.edit, .delete{
+  position:absolute;
+  width:20px;
+  height:20px;
+  display:none;
+  cursor:pointer;
+  bottom:5px;
+  padding:2px;
+   }
+.viewCmnt:hover .edit, .viewCmnt:hover .delete{
+  display:block;
+}
+.edit{
+  right:26px;  background:url(https://cdn4.iconfinder.com/data/icons/miu/22/editor_pencil_pen_edit_write_-16.png) no-repeat center #0e7ec7;
+}
+.delete{
+  right:5px;
+  background:url(https://cdn2.iconfinder.com/data/icons/flat-ui-icons-24-px/24/cross-24-16.png) no-repeat center #0e7ec7;
+  z-index:2;
 }
