--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,31 +6,32 @@ body {
 h1 {
 	color:FFF;
 	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
-	font-size: 50px;
+	font-size: 74px;
 	font-weight: 500;
 	line-height: 26.4px;
 	text-transform: uppercase;
 	text-align: center;
-	margin: 10;
-	padding: 30;
+	margin: 10px;
+	padding: 40px;
 }
 
-*{
+/**{
   margin:auto;
   padding:auto;
   box-sizing:border-box;
   border:0;
-}
+}*/
 
 body{
   font: 20px/100%;
  font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+ padding-top: 30px;
   }
 
 .clear{clear:both;}
 
 .wrapper{
-  width:90%;
+  width:80%;
   margin:10px auto;
 }
 .commentBox{
@@ -51,14 +52,14 @@ label{
   line-height:32px;
   display:block;
   margin-bottom:10px;
-  font-size:30px;
+  font-size:18px;
   color:#000;
  padding-left:34px; background:url(https://cdn3.iconfinder.com/data/icons/glypho-free/64/pen-checkbox-32.png) no-repeat left center;
 }
-/*text box font properties*/
+/*text box properties*/
 textarea{
   width:100%;
-  height:800px;
+  height:400px;
   padding:10px;
   border:1px solid #eee;
   resize:none;
@@ -70,8 +71,8 @@ button{
   padding:5px 20px;
   background-color:#000;
   color:#fff;
-  float:right;
   font-size: 18px;
+  float: right;
 }
 
 .viewCmnt{
