--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -117,3 +117,27 @@ button{
   background:url(https://cdn2.iconfinder.com/data/icons/flat-ui-icons-24-px/24/cross-24-16.png) no-repeat center #0e7ec7;
   z-index:2;
 }
+
+.blinker { 
+  animation-name: blinker;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(1,0,0,1);
+  animation-duration: 1s;
+ 
+  display: inline-block;
+  width: 100px;
+  height: 8px;
+  position: relative;
+   top: 40px;
+  margin-left: 10px;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(white,.3);
+  background: $y;
+}
+
+@keyframes blinker { 
+  from { opacity: 1.0; } to { opacity: 0.0; }
+}
+
+h1 { display:flex; align-items: center; justify-content: center; font-size: 80px; }
+time { font-size: 12px; color:rgba(white,.2); }
