--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -141,3 +141,7 @@ button{
 
 h1 { display:flex; align-items: center; justify-content: center; font-size: 80px; }
 time { font-size: 12px; color:rgba(white,.2); }
+
+#text {
+  color: #fff;
+}
