--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,4 @@
-body {
-    background-color: #000;
-}
+
 
 /*Page header styling*/
 h1 {
@@ -11,8 +9,10 @@ h1 {
 	line-height: 26.4px;
 	text-transform: uppercase;
 	text-align: center;
-	margin: 10px;
-	padding: 40px;
+	margin: 0px;
+	padding: 50px;
+
+
 }
 
 /**{
@@ -23,9 +23,10 @@ h1 {
 }*/
 
 body{
-  font: 20px/100%;
+  /*font: 20px/100%;*/
+ background-color: #000;
  font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
- padding-top: 30px;
+ padding-top: 0px;
   }
 
 .clear{clear:both;}
@@ -118,6 +119,13 @@ button{
   z-index:2;
 }
 
+#send {
+  font: 12px/100%;
+ font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+ padding-top: 5px;
+
+
+}
 .blinker { 
   animation-name: blinker;
   animation-iteration-count: infinite;
@@ -139,9 +147,14 @@ button{
   from { opacity: 1.0; } to { opacity: 0.0; }
 }
 
-h1 { display:flex; align-items: center; justify-content: center; font-size: 80px; }
-time { font-size: 12px; color:rgba(white,.2); }
+/*h1 { display:flex; align-items: center; justify-content: center; font-size: 80px; }
+time { font-size: 12px; color:rgba(white,.2); }*/
 
 #text {
   color: #fff;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 5%;
+  
+  font-size: 30px;
 }
