--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -178,6 +178,7 @@ time { font-size: 12px; color:rgba(white,.2); }*/
   margin-right: 9%;
   margin-bottom: 5%;
   font-size: 35px;
+  text-align: center;
 }
 
 #text2 {
@@ -187,6 +188,7 @@ time { font-size: 12px; color:rgba(white,.2); }*/
   margin-right: 6%;
   margin-bottom: 5%;
   font-size: 35px;
+  text-align: center;
 }
 
 #apologyprompt {
